<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>interactive_markers</name>
  <description>
     3D interactive marker communication library for RViz and similar tools.
  </description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>  
  <version>1.11.3</version>

  <author>David Gossow</author>

  <url>http://ros.org/wiki/interactive_markers</url>

  <buildtool_depend>ament</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>ros2_console</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ros2_time</build_depend>

  <exec_depend>ros2_console</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>ros2_time</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
